# hitman

./: .gitignore  Cargo.toml  README.md
src/: config.rs  free.rs  kidnap.rs  main.rs  massacre.rs  utilities.rs
