[package]
name = "hm"
version = "0.1.0"
edition = "2021"
authors = ["Pietro Agnoli <pietro_agnoli@proton.me>"]
description = "Hitman is an improved version of the Unix rm command."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }